--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-select-virtualized",
-  "version": "5.1.2",
+  "version": "5.2.0",
   "description": "Select virtualized component using: react-select v4 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.27.2",
     "@babel/core": "7.16.7",
-    "@babel/plugin-transform-runtime": "7.16.7",
     "@babel/preset-env": "7.16.7",
     "@babel/preset-react": "7.16.7",
     "@dump247/storybook-state": "1.6.1",
@@ -54,7 +53,6 @@
     "babel-loader": "8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-preset-minify": "0.5.1",
-    "core-js": "3.20.2",
     "eslint": "8.6.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.3.0",
@@ -112,11 +110,10 @@
     "regenerator-runtime": "^0.13.9"
   },
   "browserslist": [
-    "last 2 versions",
-    "not ie <= 11",
-    "not opera >= 0",
-    "not opera >= 0",
-    "not ie <= 11"
+    "last 2 Chrome versions",
+    "last 2 Edge versions",
+    "last 2 Safari versions",
+    "last 2 Firefox versions"
   ],
   "lint-staged": {
     "*.{js,jsx}": [
