--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-select-virtualized",
-  "version": "5.3.0",
+  "version": "5.2.0",
   "description": "Select virtualized component using: react-select v4 + react-virtualized + react hooks",
   "author": "guiyep",
   "license": "MIT",
   "repository": "guiyep/react-select-virtualized",
   "main": "dist/index.min.js",
   "engines": {
-    "node": ">=14",
-    "npm": ">=8"
+    "node": ">=12",
+    "npm": ">=7"
   },
   "keywords": [
     "react",
@@ -22,11 +22,11 @@
   "scripts": {
     "test": "jest",
     "build": "rollup -c",
-    "build-prod": "NODE_ENV=production BABEL_ENV=production rollup -c --bundleConfigAsCjs",
+    "build-prod": "NODE_ENV=production BABEL_ENV=production rollup -c",
     "start": "rollup -c -w",
     "deploy": "gh-pages -d",
     "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook --config-dir .storybook",
+    "build-storybook": "build-storybook -c .storybook",
     "prepare": "husky install",
     "lint": "yarn run eslint ./src/**/**/*.{js,jsx} && yarn run prettier ./src",
     "eslint": "eslint --fix",
@@ -39,57 +39,54 @@
     "audit-fix": "yarn-audit-fix"
   },
   "devDependencies": {
-    "@applitools/eyes-storybook": "^3.29.4",
-    "@babel/core": "7.20.5",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.18.6",
+    "@applitools/eyes-storybook": "^3.27.2",
+    "@babel/core": "7.16.7",
+    "@babel/preset-env": "7.16.7",
+    "@babel/preset-react": "7.16.7",
     "@dump247/storybook-state": "1.6.1",
-    "@storybook/addon-actions": "6.5.14",
-    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-actions": "6.4.9",
     "@storybook/addon-info": "5.3.21",
-    "@storybook/addon-links": "6.5.14",
-    "@storybook/addons": "6.5.14",
-    "@storybook/builder-webpack5": "6.5.14",
-    "@storybook/manager-webpack5": "^6.5.14",
-    "@storybook/react": "6.5.14",
+    "@storybook/addon-links": "6.4.9",
+    "@storybook/addons": "6.4.9",
+    "@storybook/react": "6.4.9",
     "babel-eslint": "10.1.0",
-    "babel-loader": "9.1.0",
+    "babel-loader": "8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "babel-preset-minify": "0.5.2",
-    "eslint": "8.29.0",
+    "babel-preset-minify": "0.5.1",
+    "eslint": "8.6.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-config-standard-react": "12.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-config-standard-react": "11.0.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.31.11",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-standard": "5.0.0",
     "extend-shallow": "3.0.2",
     "faker": "^5.5.3",
-    "filesize": "^10.0.5",
-    "husky": "8.0.2",
-    "jest": "29.3.1",
+    "filesize": "^8.0.6",
+    "husky": "7.0.4",
+    "jest": "27.4.6",
     "jest-css-modules": "2.1.0",
-    "lint-staged": "13.1.0",
-    "postcss": "^8.4.19",
-    "prettier": "2.8.1",
-    "prop-types": "15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-select": "5.7.0",
+    "lint-staged": "12.1.5",
+    "postcss": "^8.4.5",
+    "prettier": "2.5.1",
+    "prop-types": "15.8.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-select": "5.2.1",
     "react-testing-library": "8.0.1",
     "react-virtualized": "9.22.3",
-    "rollup": "3.6.0",
+    "rollup": "2.63.0",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-babel-minify": "10.0.0",
     "rollup-plugin-cleaner": "1.0.0",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-gzip": "3.1.0",
+    "rollup-plugin-gzip": "3.0.0",
     "rollup-plugin-import-alias": "1.0.10",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
@@ -97,7 +94,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-terser": "7.0.2",
-    "yarn-audit-fix": "^9.3.7"
+    "yarn-audit-fix": "^9.0.4"
   },
   "files": [
     "dist"
@@ -105,12 +102,12 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-select": "^5.7.0",
+    "react-select": "^5.1.0",
     "react-virtualized": "^9.22.3"
   },
   "dependencies": {
     "lodash.debounce": "4.0.8",
-    "regenerator-runtime": "^0.13.11"
+    "regenerator-runtime": "^0.13.9"
   },
   "browserslist": [
     "last 2 Chrome versions",
